--- a/JICHANGEAPI/ClientApp/src/index.html
+++ b/JICHANGEAPI/ClientApp/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Jichange</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!--    <base href="/" />
+-->    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
     <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
