--- a/JICHANGEAPI/ClientApp/src/index.html
+++ b/JICHANGEAPI/ClientApp/src/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Jichange</title>
-<!--    <base href="/" />
--->    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--    <base href="/" />
+-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
     <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -23,11 +24,6 @@
   </head>
   <body>
     <app-root></app-root>
-    <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com -->
-    <script
-      type="text/html"
-      src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
-    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> -->
     <!-- GOOGLE SIGN IN BUTTON -->
